name:                bunyan
version:             0.1.0.0
synopsis:            Logging for JSON compatible with node-bunyan
description:         Please see <http://github.com/yamadapc/haskell-bunyan>
homepage:            http://github.com/name/project
license:             MIT
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           Copyright (c) 2015 Pedro Tacla Yamada
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     System.Log.Bunyan
  build-depends:       base >= 4.7 && < 5
                     , iso8601-time
                     , text
                     , time
                     , data-default
                     , aeson
                     , hostname
                     , unix
                     , fast-logger
  default-language:    Haskell2010

test-suite hspec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , iso8601-time
                     , text
                     , time
                     , data-default
                     , hostname
                     , fast-logger
                     , hspec
                     , bunyan
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yamadapc/haskell-bunyan
